Update to Paper 1.21.8